@startuml
class RegistarOrganizacaoUI{
}
class RegistarOrganizacaoController{
+novaOrganizacao(nome,NIF,endLocal,endCodPostal,endLocalidade,tlf,site,email,nomeG,função,tlfG,emailG,pwd)
+registaOrganizao()
}
class Organizacao{
    -String nome
    -String NIF
    -String website
    -String telefone
    -String email
    --
    +Organizacao(nome,NIF,webSite,telefone,email,endereco,gestorColaborador)
    +EnderecoPostal novoEndereco(local,codPostal,localidade)
    +Colaborador novoColaborador(nome,funcao,tlf,email)
}
class RegistoOrganizacoes{
    +Organizacao novaOrganizacao(nome,NIF,endLocal,endCodPostal,
    endLocalidade,tlf,site,email,nomeG,função,tlfG,emailG)
    +validaOrganizacao(Organizacao org)
    +registaOrganizao(Organizacao org)
    -addOrganizacao(Organizacao org)
    -registaGestorComoUtilizador(Colaborador colab)
    -enviaPwd(String emailG, String pwd)
}
class Plataforma{
    -String designacao
    --
    +RegistoOrganizacoes getRegistoOrganizacoes()
    +AutorizacaoFacade getAutorizacaoFacade()
    +AlgoritmoGeradorPasswords getAlgoritmoGeradorPwd()
}
class EnderecoPostal{
    -String local
    -String codPostal
    -String localidade
    --
    +EnderecoPostal(local,codPostal,localidade)
}
class Colaborador{
    -String nome
    -String funcao
    -String telefone
    -String email
    --
    +Colaborador(nome,função,tlf,email)
    +String getNome()
    +String getEmail()
}
class AutorizacaoFacade{
    +registaUtilizadorComPapeis(nomeG,emailG,pwd_listaPapel)
}
interface AlgoritmoGeradorPasswords <<interface>>{
    +String geraPassword(String nomeG, String emailG)
}
RegistarOrganizacaoUI ..> RegistarOrganizacaoController
RegistarOrganizacaoController ..> Organizacao
RegistarOrganizacaoController ..> RegistoOrganizacoes
RegistarOrganizacaoController ..> Plataforma
RegistoOrganizacoes "1" --> "*" Organizacao : tem registadas
RegistoOrganizacoes ..> AutorizacaoFacade
RegistoOrganizacoes ..> AlgoritmoGeradorPasswords
Organizacao "1" --> "1" EnderecoPostal : localizada em
Organizacao "1" --> "1..*" Colaborador : tem
Organizacao "1" --> "1" Colaborador: tem gestor
RegistoOrganizacoes ..> Colaborador
RegistoOrganizacoes ..> EnderecoPostal
@enduml